fix: added more vertical spacing between back to top arrow and footer elements

--- a/app/(pages)/_components/Footer/Footer.module.scss
+++ b/app/(pages)/_components/Footer/Footer.module.scss
@@ -171,7 +171,7 @@ $brand-icon-color: white;
     
     .arrowToTop {
         position: absolute;
-        top: 28px;
+        top: 18px;
         right: 31px;
         display: flex;
         flex-direction: row;
